--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <h1>Hi this is my first Project</h1>    
 <h2>Just studing how to create web pages</h2>
 <hr>
-    <h3><a href="./public/birthday_invite.html">Birthday invite</a></h3>
+    <h3>
+        <a href="./public/birthday_invite.html">Birthday invite</a>
+    </h3>
     <img src="./assets/images/birthday-invite_1.png" height="200"/>
-    <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
+    <h3>
+        <a href="./public/movie-ranking.html">Movie ranking project</a>
+    </h3>
     <img src="./assets/images/movie-ranking.png"  height=200 />
 </hr>
 <a href="./public/contact.html">Contact me </a>
