--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hi this is my first Project</h1>    
+<h1>My portfolio</h1>
 <h2>Just studing how to create web pages</h2>
 <hr>
     <h3>
